--- a/_config.yml
+++ b/_config.yml
@@ -38,19 +38,19 @@ disqus_shortname:   taylantatli
   #ad-slot:
 #bing-verify:
 email:  xorrbs100@naver.com
-twitter:            ''
-facebook:           ''
+#twitter:            ''
+#facebook:           ''
 github-url:         xorrbs100
 #stackoverflow:     123456/username   from a "http://stackoverflow.com/users/123456/username" link
 #linkedin:          username
 #xing:              username
-instagram:          ''
+#instagram:          ''
 #lastfm:            username
 #tumblr:            username
 #medium:            '@username'
 #pinterest:         username
 #foursquare:        username
-steam:              ''
+#steam:              ''
 #dribbble:          username
 #youtube:           username
 #youtube-channel:   channel
