--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site
 title:              Portfolio
 bio:                '공부하는 개발자 임택균의 작은공간'
-description:        "Moon is a minimal, one column jekyll theme for your blog."
+description:        "My first blog for a portfolio"
 reading_time:       true
 words_per_minute:   200
 logo:               'assets/img/logo.png'
