--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site
-title:              Portfolio
-bio:                '공부하는 개발자 임택균의 작은공간'
+title:              I'm Sponge
+bio:                '발전하는 개발자 임택균의 작은공간'
 description:        "My first blog for a portfolio"
 reading_time:       true
 words_per_minute:   200
